# ai-agents-lab

./: .gitignore  01-Capsule.md  README.md  project_roadmab.md  run.sh
ai_deal_architect/: .gitignore  README.md  agents.py  future_upgrades.md  main.py  requirements.txt  setup_and_run.sh  tasks.py  tools.py
ai_deal_architect/src/: main.py  tasks.py
ai_financial_analyst/: config.py  main.py  pyproject.toml
