[project]
name = "ai-financial-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crewai>=1.14.4",
    "crewai-tools>=1.14.4",
    "langchain>=1.2.17",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
]
